--- a/index.html
+++ b/index.html
@@ -50,17 +50,19 @@
     </nav>
     <div class="container text-center mt-5">
         <div id="product-container" class="row row-cols-2 row-cols-md-2 row-cols-lg-4 g-4">
-            
+
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="assets/js/app.js"></script>
     <script>
-        document.getElementById('search-form').addEventListener('submit', function (event) {
+        document.querySelector('form.d-flex').addEventListener('submit', function (event) {
             event.preventDefault();
-            const query = document.getElementById('search-input').value;
+            const query = document.querySelector('input[type="search"]').value;
             window.location.href = `details.html?query=${query}`;
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
