--- a/result.html
+++ b/result.html
@@ -58,7 +58,7 @@
 
         </div>
     </div>
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/app.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
